--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "typescript": "^5.0.0",
     "react-dom": "18.2.0",
     "react": "18.2.0",
-    "@bunpmjs/bunext": "0.2.45^"
+    "@bunpmjs/bunext": "0.2.45^",
+    "@material-design-icons/svg": "^0.14.13"
+  },
+  "dependencies": {
+    "@mui/icons-material": "latest"
   }
 }
