--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@types/bun": "latest",
     "@types/react": "latest"
   },
-  "peerDependencies": {
-    "@material-design-icons/svg": "latest"
+  "dependencies": {
+    "@material-design-icons/svg": "latest",
+    "react-dom": "latest"
   },
   "scripts": {
-    "build": "bun src/build.ts"
+    "build": "bun style/build.tsx"
   }
 }
